Detect devices for brand LG (#6803)
* feat(device) detect brand LG models: (LGM-X401S), X Power (LGLS755), K3 (LGLS450), K4 (2017) (LGL57BL), Stylo 3 Plus (LGMP450), Stylo 2 (LGLS775), G8 (LGM-X800K), X400 (LGM-X401S), X500 (LGM-X320S, LGM-X320L, LGM-X320K), K10 (LGMS428), K8 (2018) (LGUS215), G5 (LGUS992), V20 (LGV34, LG-LS997), V10 (LG-H962)

* feat(device) detect brand LG models: V20 (LG-H910), V10 (LG-H961S, LG-F600L, LG-F600K), Optimus L4 II (LG-E440), G3 Stylus (LG-D693n, LG-D693, LG-D693TR, LG-D690n), G Vista (LG-D690), G Pro Lite (LG-D686), F60 (LGMS395), AKA (LG-H788), G3 Cat. 6 (LG-F460S, LG-F460L, LG-F460K), X Cam (LG-F690L)

* feat(device) detect brand LG models: G3 (LLG-D856), L Bello (LG-D335E, LG-D331)

* feat(device) detect brand LG models: g6 (LG-LS993), X Charge (LG-M322), Class (LG-F620K), G3 (LG-D851), G Stylo (LG-H635)

* feat(device) detect brand LG models: X Skin (LG-F740L), Stylus 2 (LG-F720S), X Venture (LG-H700), v20 (LG-H915), Q8 (LG-H970), V10 (LG-H960, LG-K428), Stylus 2 Plus (LG-K530, LG-K535), Stylo 2 Plus (LG-K550), Aristo (LG-M210), Harmony (LG-M257)

* feat(device) detect brand LG models: G Pad F 7.0" (LG-V400), G Pad 7.0" LTE (LG-V410), G Pad 8.0 (LG-V480), G Pad F 8.0" (LG-V495, LG-V496), G Pad II 8.0" (LG-V497), G3 (LGL24), Optimus L7 II (LG-P710, LG-P715), Optimus F5 (LG-P875, LG-P875h), Optimus F6 (LGMS500)

* feat(device) detect brand LG models: Volt (LGLS740), Tribute (LGLS660), F70 (LGL31L), Ultimate 2 (LGL41C), L60i (LG-X135), Optimus L5 II (LG-E460), Optimus L1 II (LG-E475f, LG-E415f), Optimus L4 II (LG-E470f, LG-E465f), Optimus L4 II Dual (LG-E467f), Optimus G (LG-E975), Optimus L3 II (LG-E435f), L30 (LG-D125), G3S (LG-D722), G2 (LG-D800), Stylo 3 (LGL83BL), W31 (LM-K315IM), Harmony 4 (LM-K400), K92 (LM-K920), V40 ThinQ (LM-V405EBW)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9691,7 +9691,7 @@ Lexibook:
     - regex: '(MFC[0-9]{3}[a-z]{2,})'
       model: '$1'
 
-# LG
+# LG (lg.com)
 LG:
   regex: 'LG|Web0S; Linux/SmartTV|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05[DE]|L-03K|L-01[LJK]|L-52A|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40|DM-01K|DM-02H|LMX130IM|VS810PP|VS425'
   device: 'smartphone'
@@ -9700,7 +9700,7 @@ LG:
       model: 'Disney Mobile DM-$1'
     - regex: 'LG-D32[05]'
       model: 'L70'
-    - regex: 'LG-D315'
+    - regex: 'LG-?(D315|L31L)'
       model: 'F70'
     - regex: 'LG-D4(?:[01]5|10)'
       model: 'L90'
@@ -9708,8 +9708,12 @@ LG:
       model: 'L80'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
+    - regex: 'LG-D125'
+      model: 'L30'
     - regex: 'LG-X145'
       model: 'L60'
+    - regex: 'LG-X135'
+      model: 'L60i'
     - regex: 'LG-D285'
       model: 'L65'
     - regex: 'LM-X210APM'
@@ -9722,12 +9726,16 @@ LG:
       model: 'Tribute Empire'
     - regex: 'LGLS675'
       model: 'Tribute 5'
-    - regex: 'VS980|L-01F|LG-F320L'
+    - regex: 'VS980|L-01F|LG-F320L|LG-D800'
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[01258]|VS985|LGLS990'
+    - regex: 'LG-D85[012568]|VS985|LGLS990|LGL24(?:[);/ ]|$)'
       model: 'G3'
+    - regex: 'LG-D722'
+      model: 'G3S'
+    - regex: 'LG-D693n?|LG-D690n'
+      model: 'G3 Stylus'
     - regex: 'LG-D72[23568]'
       model: 'G3 Beat'
     - regex: 'LG-F460'
@@ -9744,11 +9752,11 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?LS992'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?[LU]S992'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-AS993'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-[AL]S993'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9756,7 +9764,7 @@ LG:
       model: 'G7 One'
     - regex: 'LGL23(?:[);/ ]|$)'
       model: 'G Flex'
-    - regex: 'LG-D680'
+    - regex: 'LG-D68[06]'
       model: 'G Pro Lite'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
@@ -9770,11 +9778,21 @@ LG:
       model: 'Wine Smart H410'
     - regex: 'VS501|LM-X120'
       model: 'K20'
+    - regex: 'LGMS395'
+      model: 'F60'
+    - regex: 'LG-H788'
+      model: 'AKA'
+    - regex: 'LM-K920'
+      model: 'K92'
+    - regex: 'LGL41C'
+      model: 'Ultimate 2'
+    - regex: 'LGLS660'
+      model: 'Tribute'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
     - regex: 'LG-(?:X15[05]|X165g)'
       model: 'Bello 2'
-    - regex: 'LG-D335'
+    - regex: 'LG-D33[15]'
       model: 'L Bello'
     - regex: 'LG-D29[05]'
       model: 'L Fino'
@@ -9786,21 +9804,43 @@ LG:
       model: 'Risio 2'
     - regex: 'LGM-K120[LSK]'
       model: 'X300'
+    - regex: 'LGM-X401S'
+      model: 'X400'
+    - regex: 'LGM-X320[SKL]?(?:[);/ ]|$)'
+      model: 'X500'
+    - regex: 'LG-F620K'
+      model: 'Class'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
+    - regex: 'LG-E975'
+      model: 'Optimus G'
+    - regex: 'LG-E435f'
+      model: 'Optimus L3 II'
+    - regex: 'LG-E4(?:70f|40|65f)'
+      model: 'Optimus L4 II'
+    - regex: 'LG-E467f'
+      model: 'Optimus L4 II Dual'
+    - regex: 'LG-E460'
+      model: 'Optimus L5 II'
+    - regex: 'LG-E4[17]5f'
+      model: 'Optimus L1 II'
+    - regex: 'LG-P875'
+      model: 'Optimus F5'
+    - regex: 'LGMS500'
+      model: 'Optimus F6'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
       model: 'Optimus it $1'
     - regex: 'LG-L160L(?:[);/ ]|$)'
       model: 'Optimus LTE 2'
-    - regex: 'P713(?:[);/ ]|$)'
-      model: 'Optimus L7II'
+    - regex: '(?:P713|LG-P71[05])(?:[);/ ]|$)'
+      model: 'Optimus L7 II'
     - regex: 'L-01D(?:[);/ ]|$)'
       model: 'Optimus LTE L-01D'
     - regex: 'L-02D(?:[);/ ]|$)'
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-)?(?:F800[SKL]?|H990|US996)'
+    - regex: '(?:LG-?)?(?:F800[SKL]?|H990|H910(?:PR)?|US996|V34|LS997)(?:[);/ ]|$)'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
@@ -9808,14 +9848,18 @@ LG:
       model: 'Q Stylus'
     - regex: 'LG-M400'
       model: 'Stylus 3'
-    - regex: 'LG-K520'
+    - regex: 'LG-(?:K520|F720S)'
       model: 'Stylus 2'
+    - regex: 'LG-(?:K53[05])'
+      model: 'Stylus 2 Plus'
     - regex: 'LM-Q[67]10\.FG(?:[);/ ]|$)'
       model: 'Q7'
     - regex: 'LM-(Q725[KL]|Q610.FGN)(?:[);/ ]|$)'
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
+    - regex: 'LGM-X800[KL]|LG-H970'
+      model: 'Q8'
     - regex: 'LM-Q925[LKS](?:[);/ ]|$)'
       model: 'Q9'
     - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
@@ -9826,17 +9870,19 @@ LG:
       model: 'Style'
     - regex: 'L-01L(?:[);/ ]|$)'
       model: 'Style 2'
+    - regex: 'LGLS775'
+      model: 'Stylo 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
-    - regex: 'LGMS550'
+    - regex: 'LG-?(?:MS550|K550)'
       model: 'Stylo 2 Plus'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
-    - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:MS631|H635)(?:[);/ ]|$)'
       model: 'G Stylo'
-    - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:LS777|L84VL|M430|L83BL)(?:[);/ ]|$)'
       model: 'Stylo 3'
-    - regex: 'LG-?(TP450)(?:[);/ ]|$)'
+    - regex: 'LG-?([TM]P450)(?:[);/ ]|$)'
       model: 'Stylo 3 Plus'
     - regex: 'LM-Q710|LML713DL|LG-Q710[AP]L'
       model: 'Stylo 4'
@@ -9856,19 +9902,23 @@ LG:
       model: 'Premier Pro LTE'
     - regex: 'LM-X525'
       model: 'Q60'
+    - regex: 'LM-K315IM'
+      model: 'W31'
     - regex: 'LGL423DL'
       model: 'Solo LTE'
     - regex: 'LM-X210K'
       model: 'X2'
-    - regex: 'LG-K580'
+    - regex: 'LG-(?:K580|F690L)'
       model: 'X Cam'
-    - regex: 'LG-(?:SP320|M327)'
+    - regex: 'LG-(?:SP320|M32[27])'
       model: 'X Charge'
     - regex: 'LG-K200|LGLS676'
       model: 'X Style'
+    - regex: 'LG-F740L'
+      model: 'X Skin'
     - regex: 'LG-K500'
       model: 'X Screen'
-    - regex: 'LG-M710'
+    - regex: 'LG-(?:M710|H700)'
       model: 'X Venture'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
@@ -9888,6 +9938,8 @@ LG:
       model: 'Rabel 2'
     - regex: 'LG-X190'
       model: 'Ray'
+    - regex: 'LGLS740'
+      model: 'Volt'
     - regex: 'LM-X410'
       model: 'LM-X410'
     - regex: 'LGM-K121S'
@@ -9898,7 +9950,7 @@ LG:
       model: 'K4'
     - regex: 'LG-K130(?:[);/ ]|$)'
       model: 'K4 LTE'
-    - regex: 'LG-M160(?:[);/ ]|$)'
+    - regex: '(?:LG-?)?(?:M160|L57BL)(?:[);/ ]|$)'
       model: 'K4 (2017)'
     - regex: 'LM-X420'
       model: 'K40'
@@ -9922,13 +9974,13 @@ LG:
       model: 'X6'
     - regex: 'LM-X625N'
       model: 'X6 (2019)'
-    - regex: 'LGMS210'
+    - regex: 'LGMS210|LG-M210'
       model: 'Aristo'
     - regex: 'LM-X210[G]?'
       model: 'Aristo 2'
     - regex: 'LM-X220(?:[);/ ]|$)'
       model: 'Aristo 3'
-    - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
+    - regex: 'LM-V40(?:5|9N|5EBW)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
     - regex: 'LM-(?:V500N|V450)(?:[);/ ]|$)'
       model: 'V50 ThinQ'
@@ -9938,7 +9990,7 @@ LG:
       model: 'Q92'
     - regex: 'LM-Q927L'
       model: 'Q9 One'
-    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[0128]|VS990)'
+    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990|F600[LK]|K428)'
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
@@ -9948,7 +10000,7 @@ LG:
       model: 'K8 4G'
     - regex: '(?:LG-)?VS500'
       model: 'K8 V'
-    - regex: 'LM-X212\(G\)'
+    - regex: 'LM-X212\(G\)|LGUS215'
       model: 'K8 (2018)'
     - regex: '(?:LG-)?(?:VS995|F800K|US999|LS997|H91[058]|H990(?:DS|[NT])?)'
       model: 'V20'
@@ -9974,7 +10026,7 @@ LG:
       model: 'Optimus Zone 2'
     - regex: '(?:LG-)?VS425PP'
       model: 'Optimus Zone 3'
-    - regex: '(?:LG-)?K100'
+    - regex: '(?:LG-?)?(?:K100|LS450)'
       model: 'K3'
     - regex: 'LG-AS110'
       model: 'K3 (2017)'
@@ -9984,7 +10036,7 @@ LG:
       model: 'K8'
     - regex: 'VS500PP'
       model: 'K8 V'
-    - regex: '(?:LG-)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410)'
+    - regex: '(?:LG-?)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410|MS428)'
       model: 'K10'
     - regex: '(?:LG-)?M250N?'
       model: 'K10 (2017)'
@@ -10014,7 +10066,11 @@ LG:
       model: 'W30'
     - regex: 'LGV36(?:[);/ ]|$)'
       model: 'it'
-    - regex: '(?:LG-?)?K220'
+    - regex: 'LG-M257(?:[);/ ]|$)'
+      model: 'Harmony'
+    - regex: 'LM-K400(?:[);/ ]|$)'
+      model: 'Harmony 4'
+    - regex: '(?:LG-?)?(?:K220|LS755)'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
       model: 'X Power 2'
@@ -10040,7 +10096,7 @@ LG:
       model: 'Rebel 4'
     - regex: 'VS876'
       model: 'Lucid 3'
-    - regex: 'VS880(PP)?'
+    - regex: 'VS880(PP)?|LG-D690'
       model: 'G Vista'
     - regex: 'VS820'
       model: 'Lancet'
@@ -10055,19 +10111,22 @@ LG:
     - regex: 'LM-T605'
       model: 'G Pad 5 10.1" FHD'
       device: 'tablet'
-    - regex: 'LGUK410'
+    - regex: 'LG-?(?:UK|V)410'
       model: 'G Pad 7.0" LTE'
       device: 'tablet'
     - regex: 'LG-V533'
       model: 'G Pad IV 8.0"'
       device: 'tablet'
-    - regex: 'LGLK430'
+    - regex: 'LG-?(?:LK430|V400)'
       model: 'G Pad F 7.0"'
       device: 'tablet'
     - regex: 'LGLK430'
       model: 'G Pad F 7.0"'
       device: 'tablet'
-    - regex: 'LG-V490'
+    - regex: 'LG-V49[56]'
+      model: 'G Pad F 8.0"'
+      device: 'tablet'
+    - regex: 'LG-V4[89]0'
       model: 'G Pad 8.0'
       device: 'tablet'
     - regex: 'LGT01'
@@ -10078,6 +10137,9 @@ LG:
       device: 'tablet'
     - regex: 'LG-V700'
       model: 'G Pad 10.1'
+      device: 'tablet'
+    - regex: 'LG-V497'
+      model: 'G Pad II 8.0"'
       device: 'tablet'
     - regex: 'LG-V935'
       model: 'G Pad II 10.1'
