feat(device) detect new brand DIGIFORS model: Smart 400
feat(device) detect brand Thomson model: TEO104G
feat(device) detect brand S-TELL model: M556
feat(device) detect brand Tecno Mobile model: Spark 2 (KA7)
feat(device) detect brand Prestigio models: Grace Z5 (PSP5530DUO), Muze V3 LTE (PSP3495DUO), Wize G3 (PSP3510DUO), Muze D5 LTE (PSP5513DUO)
feat(device) detect brand HTC models: U11 Plus (2Q4D100), One E9 (E9x), One M9 Plus (M9pw),  One A9 (2PQ910), U Play (U-2u)
feat(device) detect brand Nomi models: Libra 4 LTE (C080034), Corsa 4 LTE (C070034), Corsa (C070010), Evo M3 (i5001)
feat(device) detect brand Infinix models: Smart 3 Plus (X627V) Hot 9 (X655D, X655C),

feat(test) add tests: Alcatel 3L (2020) (5029D_EEA), Haier T54P, HTC One M9, Inoi 5X Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -89,7 +89,9 @@ HTC:
     # explicit smartphone models
     - regex: '2PZC5(?:[);/ ]|$)'
       model: 'U11'
-    - regex: 'U11 plus(?:[);/ ]|$)'
+    - regex: 'HTC_U-2u(?:[);/ ]|$)'
+      model: 'U Play'
+    - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
       model: 'U11 Plus'
     - regex: 'U11 life(?:[);/ ]|$)'
       model: 'U11 Life'
@@ -117,19 +119,23 @@ HTC:
       model: 'J Butterfly'
     - regex: 'HTCButterflys901s(?:[);/ ]|$)'
       model: 'Butterfly S'
-    - regex: '(?:0PJA2|0PJA10)(?:[);/ ]|$)'
+    - regex: '(?:0PJA2|0PJA10|HTC One M9)(?:[);/ ]|$)'
       model: 'One M9'
+    - regex: 'HTC[_ ]M9pw(?:[);/ ]|$)'
+      model: 'One M9 Plus'
     - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
       model: 'One M7'
     - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
       model: 'One M8'
     - regex: '0PAJ5(?:[);/ ]|$)'
       model: 'One E8'
+    - regex: 'HTC[_ ]E9x(?:[);/ ]|$)'
+      model: 'One E9'
     - regex: 'HTC6515LVW(?:[);/ ]|$)'
       model: 'One Remix'
     - regex: 'X525a(?:[);/ ]|$)'
       model: 'One X+'
-    - regex: '2PQ93(?:[);/ ]|$)'
+    - regex: '2PQ9(?:3|10)(?:[);/ ]|$)'
       model: 'One A9'
     - regex: 'ADR6300'
       model: 'Droid Incredible'
@@ -8128,6 +8134,8 @@ Infinix:
       model: 'Hot 7'
     - regex: 'Infinix[ _-]X650'
       model: 'Hot 8'
+    - regex: 'Infinix[ _-]X655'
+      model: 'Hot 9'
     - regex: 'Infinix[ _-]X680'
       model: 'Hot 9 Play'
     - regex: 'Infinix[ _-]X573B?'
@@ -8137,6 +8145,8 @@ Infinix:
       model: 'Smart'
     - regex: 'Infinix[ _-]X5515F'
       model: 'Smart 2'
+    - regex: 'Infinix[ _-]X627V'
+      model: 'Smart 3 Plus'
     - regex: 'Infinix[ _-]X5514D'
       model: 'Smart 2 Pro'
     - regex: 'Infinix[ _-]X653'
@@ -11823,13 +11833,15 @@ Opsson:
     - regex: '(?:Opsson-)?Opsson[ -_]([^/;]+)/'
       model: '$1'
 
-# Nomi
+# Nomi (nomi-electronics.com)
 Nomi:
   regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3]|i(?:50[015]|450|40[01]|55[02]))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'i501[23](?:[);/ ]|$)'
       model: 'Evo M2'
+    - regex: 'Nomi_i5001(?:[);/ ]|$)'
+      model: 'Evo M3'
     - regex: 'I5070(?:[);/ ]|$)'
       model: 'Iron-X'
     - regex: 'i5014(?:[);/ ]|$)'
@@ -11852,8 +11864,17 @@ Nomi:
     - regex: '(?:Nomi_)?C101040'
       model: 'Ultra 3 Pro'
       device: 'tablet'
+    - regex: '(?:Nomi_)?C070010'
+      model: 'Corsa'
+      device: 'tablet'
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C070034'
+      model: 'Corsa 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C080034'
+      model: 'Libra 4 LTE'
       device: 'tablet'
     - regex: '(?:Nomi_)?C07008'
       model: 'Sigma'
@@ -13254,8 +13275,8 @@ S-TELL:
   regex: 'S-TELL'
   device: 'smartphone'
   models:
-    - regex: '(?:S-TELL[ _])?M4(61|77|80)'
-      model: 'M4$1'
+    - regex: '(?:S-TELL[ _])?M(4(?:61|77|80)|556)'
+      model: 'M$1'
 
 # Safaricom
 Safaricom:
@@ -14847,7 +14868,7 @@ SWISSMOBILITY:
 
 # Thomson
 Thomson:
-  regex: '(?:Primo(7|8)|QM73[45]-8G|QM734-2|QM736-8G\(HD\)|(?<!\.)8950|MID1002|5014G|TEO7RK|Friendly_TH101|Delight TH201)(?:[);/ ]|$)|(?:Tlink|Every)[0-9]+|THOMSON,'
+  regex: '(?:Primo(7|8)|QM73[45]-8G|QM734-2|QM736-8G\(HD\)|(?<!\.)8950|MID1002|5014G|TEO7RK|TEO104G|Friendly_TH101|Delight TH201)(?:[);/ ]|$)|(?:Tlink|Every)[0-9]+|THOMSON,'
   device: 'tablet'
   models:
     # already detected as manta device
@@ -14865,8 +14886,8 @@ Thomson:
       model: 'QM736-8G (HD)'
     - regex: '(?<!\.)8950(?:[);/ ]|$)'
       model: '3G 8950'
-    - regex: 'TEO7RK(?:[);/ ]|$)'
-      model: 'TEO7RK'
+    - regex: 'TEO(7RK|104G)(?:[);/ ]|$)'
+      model: 'TEO$1'
 
     - regex: '5014G(?:[);/ ]|$)'
       device: 'smartphone'
@@ -15144,16 +15165,25 @@ Prestigio:
     - regex: 'PSP5470DUO'
       device: 'smartphone'
       model: 'Grace X5'
+    - regex: 'PSP5530DUO'
+      device: 'smartphone'
+      model: 'Grace Z5'
     - regex: 'PSP5515DUO'
       device: 'smartphone'
       model: 'Grace P5'
     - regex: 'PSP5506DUO'
       device: 'smartphone'
       model: 'Grace Q5'
-    - regex: 'PSP3552DUO(?:[);/ ]|$)'
+    - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
-    - regex: 'PSP3511DUO(?:[);/ ]|$)'
+    - regex: 'PSP3495DUO'
+      device: 'smartphone'
+      model: 'Muze V3 LTE'
+    - regex: 'PSP5513DUO'
+      device: 'smartphone'
+      model: 'Muze D5 LTE'
+    - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
     - regex: 'PSP7550DUO(?:[);/ ]|$)'
@@ -15168,9 +15198,12 @@ Prestigio:
     - regex: 'PSP3532DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze F3'
-    - regex: 'PSP3423DUO(?:[);/ ]|$)'
+    - regex: 'PSP3423DUO'
       device: 'smartphone'
       model: 'Wize R3'
+    - regex: 'PSP3510DUO'
+      device: 'smartphone'
+      model: 'Wize G3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
@@ -16052,6 +16085,8 @@ Tecno Mobile:
       model: 'Pop 4 Air'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
+    - regex: 'Tecno[ _]KA7(?:[);/ ]|$)'
+      model: 'Spark 2'
     - regex: 'Tecno[ _]KB7j?(?:[);/ ]|$)'
       model: 'Spark 3'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
@@ -23535,3 +23570,9 @@ AG Mobile:
   regex: '(Hashtag|Shine|Chacer)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# DIGIFORS (digifors.ru)
+DIGIFORS:
+  regex: 'DIGIFORS (400)(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'Smart $1'
