--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2049,3 +2049,21 @@
     model: Fiber GFHD200
   os_family: GNU/Linux
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; DIGIFORS 400 Build/NHG47L; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/52.0.2743.100 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 52.0.2743.100
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: DIGIFORS
+    model: Smart 400
+  os_family: Android
+  browser_family: Chrome
