feat(device) detect new brand FLYCAT model: Optimum 5003, OPTIMUM 5004, Optimum 5001, Optimum 5002, Optimum 5501  Unicum 8S, Unicum 1002, Unicum 8003 feat(device) detect new brand iOutdoor model: X feat(device) detect brand Infinix models: s4 (X626), Hot 9 (X655), Hot 6 (X606) feat(device) detect brand Inoi models: 3 Lite, 1 Lite feat(device) detect brand UMIDIGI model: Super feat(device) detect brand Nomi model: Beat M1 (i4500), Corsa 4 LTE (C070014), Libra 3 3G (C080012) feat(device) detect brand Tecno Mobile models: Pop 2S (RA8), Spark Air (KC1), Spark 3 Pro (KB8), Pop 2 (B1),  Spark Youth (KA6), Spark CM (KA9), Pop 2S Pro (KB2j), feat(device) detect brand RIM model: Bold 9790 feat(device) detect brand THL model: 5000 feat(device) detect brand LG models: G4 (LGH810), Fortune (LG-M153) feat(device) detect brand Prestigio models: Muze A5 (PSP5502DUO), MultiPad Wize 1177 4G (PMT1177_4G),
feat(test) add tests: Samsung Galaxy Note 9 (SM-N960N), Haier A42P, Tecno Mobile WX3, Tecno Mobile W4
 Asus ZenFone Max Pro M1 (ASUS_X00TDB), Tecno Mobile RA6, Huawei Honor 8A (JAT-L29), Azumi Mobile V5
 Supra M14A 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -490,6 +490,8 @@ RIM:
       model: 'Evolve'
     - regex: 'BBH100-1'
       model: 'Evolve X'
+    - regex: '(?:BlackBerry )?(9000|9790)'
+      model: 'Bold $1'
     - regex: 'STV100-[1234]'
       model: 'BlackBerry Priv'
     - regex: 'STH100-[12]'
@@ -503,8 +505,6 @@ RIM:
       model: 'BlackBerry $1'
     - regex: 'rim([0-9]+)'
       model: 'BlackBerry $1'
-    - regex: '9000'
-      model: 'Bold 9000'
     - regex: '9300'
       model: 'Curve 3G 9300'
     - regex: '(8520|8530|9220|9320|9360)'
@@ -9120,6 +9120,12 @@ Land Rover:
     - regex: 'Polar3'
       model: 'Ioutdoor Polar 3'
 
+# iOutdoor
+iOutdoor:
+  regex: 'iOutdoor (X)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
 # lanix (lanix.com)
 Lanix:
   regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|IliumPad|X120C|Alpha 950'
@@ -9752,7 +9758,7 @@ LG:
       model: 'G3 Cat. 6'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[012589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
+    - regex: 'LG-?H81[012589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -9902,6 +9908,8 @@ LG:
       model: 'Stylo 6'
     - regex: 'LM-G710(N|VM)?|LG-G710'
       model: 'G7 ThinQ'
+    - regex: 'LG-M153'
+      model: 'Fortune'
     - regex: 'LM-X210CM'
       model: 'Fortune 2'
     - regex: 'LM-X410\.FG?(?:[);/ ]|$)'
@@ -11852,6 +11860,8 @@ Nomi:
       model: 'Evo Z'
     - regex: 'Nomi_i4510(?:[);/ ]|$)'
       model: 'Beat M'
+    - regex: 'Nomi_i4500(?:[);/ ]|$)'
+      model: 'Beat M1'
     - regex: 'i5532(?:[);/ ]|$)'
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
@@ -11870,8 +11880,11 @@ Nomi:
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
       device: 'tablet'
-    - regex: '(?:Nomi_)?C070034'
+    - regex: '(?:Nomi_)?C0700[13]4'
       model: 'Corsa 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C080012'
+      model: 'Libra 3 3G'
       device: 'tablet'
     - regex: '(?:Nomi_)?C080034'
       model: 'Libra 4 LTE'
@@ -15183,6 +15196,9 @@ Prestigio:
     - regex: 'PSP5513DUO'
       device: 'smartphone'
       model: 'Muze D5 LTE'
+    - regex: 'PSP5502DUO'
+      device: 'smartphone'
+      model: 'Muze A5'
     - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
@@ -15219,6 +15235,8 @@ Prestigio:
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
+    - regex: 'PMT1177_4G'
+      model: 'MultiPad Wize 1177 4G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
     - regex: 'PSP7610DUO([ _][A-Z]{2})?'
@@ -16069,8 +16087,14 @@ Tecno Mobile:
       model: 'Camon X Pro'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
+    - regex: 'TECNO[ _]B1(?:[);/ ]|$)'
+      model: 'Pop 2'
     - regex: 'TECNO[ _]B1[fg](?:[);/ ]|$)'
       model: 'Pop 2F'
+    - regex: 'TECNO[ _]RA8(?:[);/ ]|$)'
+      model: 'Pop 2S'
+    - regex: 'TECNO[ _]KB2j(?:[);/ ]|$)'
+      model: 'Pop 2S Pro'
     - regex: 'TECNO[ _]BA2(?:[);/ ]|$)'
       model: 'Pop 2 Plus'
     - regex: 'TECNO[ _]B1p(?:[);/ ]|$)'
@@ -16089,6 +16113,8 @@ Tecno Mobile:
       model: 'Spark 2'
     - regex: 'Tecno[ _]KB7j?(?:[);/ ]|$)'
       model: 'Spark 3'
+    - regex: 'Tecno[ _]KB8?(?:[);/ ]|$)'
+      model: 'Spark 3 Pro'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
@@ -16113,6 +16139,12 @@ Tecno Mobile:
       model: 'Spark 7P'
     - regex: 'TECNO[ _]KC1h(?:[);/ ]|$)'
       model: 'Spark Go'
+    - regex: 'TECNO[ _]KC1(?:[);/ ]|$)'
+      model: 'Spark Air'
+    - regex: 'TECNO[ _]KA6(?:[);/ ]|$)'
+      model: 'Spark Youth'
+    - regex: 'TECNO[ _]KA9(?:[);/ ]|$)'
+      model: 'Spark CM'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
@@ -16366,11 +16398,13 @@ Telit:
 
 # ThL
 ThL:
-  regex: 'ThL[ _-]|Knight 2'
+  regex: 'ThL[ _-]|Knight 2|THL5000'
   device: 'smartphone'
   models:
     - regex: 'Knight 2'
       model: 'Knight 2'
+    - regex: 'THL ?(5000)'
+      model: '$1'
     - regex: 'ThL[ _-]*([^;/]+) Build'
       model: '$1'
     - regex: 'ThL[ _-]*([^ ;/)]+)(?:[);/ ]|$)'
@@ -16660,6 +16694,8 @@ UMIDIGI:
       model: 'Bison'
     - regex: 'hammer_S'
       model: 'Hammer S'
+    - regex: 'UMI[_ ]SUPER'
+      model: 'Super'
     - regex: 'S2 LITE'
       model: 'S2 Lite'
     - regex: 'UMI_(London|Diamond(?:_X)?)'
@@ -18317,6 +18353,17 @@ MLS:
     - regex: 'iQD700(?:[);/ ]|$)'
       model: 'Color Fingerprint 4G'
 
+# FLYCAT
+FLYCAT:
+  regex: 'FLYCAT'
+  device: 'smartphone'
+  models:
+    - regex: 'OPTIMUM (500[1-4]|5501)'
+      model: 'Optimum $1'
+    - regex: 'UNICUM (1002|8S|8003)'
+      device: 'tablet'
+      model: 'Unicum $1'
+
 # Fly
 Fly:
   regex: 'Fly(?!Flow|touch)|Power Plus 5000|Photo Pro|Slimline|Life (?:Ace|Jet|Sky|Compact 4G|Geo|Zen|Play)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?:[);/ ]|$)'
@@ -19256,6 +19303,8 @@ Inoi:
   models:
     - regex: 'INOI 2 Lite 2019'
       model: '2 Lite (2019)'
+    - regex: 'INOI[_ ]([13])[_ ]LITE'
+      model: '$1 Lite'
     - regex: 'INOI ([257]) (2019|202[01])(?:[);/ ]|$)'
       model: '$1 ($2)'
     - regex: 'INOI[_ ]([^);/]+)(?: Build|[;)])'
