--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6500,3 +6500,21 @@
     model: Note 5
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-N960N Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36 YaApp_Android/11.01 YaSearchBrowser/11.01
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: "11.01"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 9
+  os_family: Android
+  browser_family: Unknown
