feat(device) detect brand Blackview models: BV9000 Pro, BV5800 Pro feat(device) detect brand Prestigio model: Grace 3157 4G (PMT3157_4G)
feat(test) add tests: BQ Sorbonne, Samsung Galaxy S7 (SM-G930F), Highscreen Easy_XL_Pro,
 Neffos C7 Lite, Asus ZenFone Max Plus M1 (X018DC), DEXP Ursus NS310

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2974,12 +2974,12 @@ Blackview:
       model: '$1 Plus'
     - regex: '(BV6000S)'
       model: '$1'
-    - regex: '(BL6000|BV(?:[48]000|5500|9[5678]00|6[38]00))Pro'
+    - regex: 'BV9000Pro-F'
+      model: 'BV9000 Pro F'
+    - regex: '(BL6000|BV(?:[48]000|5[58]00|9[05678]00|6[38]00))Pro'
       model: '$1 Pro'
     - regex: 'Blackview (A[78]|E7S)'
       model: '$1'
-    - regex: 'BV9000Pro-F'
-      model: 'BV9000 Pro F'
     - regex: '(BV6[13]00)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
@@ -15229,8 +15229,8 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT3201_4G'
-      model: 'Grace 4G'
+    - regex: 'PMT(3201|3157)_4G'
+      model: 'Grace $1 4G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
