feat(device) detect brand Xiaomi models: Redmi Note 8 (2021) (M1908C3JGG), Redmi Note 10S (M2101K7BI), MI 11 Lite 5G (M2101K9C) feat(device) detect brand OPPO models: Reno 5 Pro 5G (CPH2201), A94 5G (CPH2197), A54 5G (CPH2195), Find X3 Pro (CPH2173)
feat(device) added tests: OnePlus 7T (HD1907, HD1905), Xiaomi Mi 10T Pro, Xiaomi Mi 10T Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12456,6 +12456,8 @@ OPPO:
       model: 'A52'
     - regex: 'CPH2127(?:[);/ ]|$)'
       model: 'A53'
+    - regex: 'CPH2195(?:[);/ ]|$)'
+      model: 'A54 5G'
     - regex: 'PEM[MT][02]0(?:[);/ ]|$)'
       model: 'A55 5G'
     - regex: '(?:OPPO[ _]?)?CPH170[15](?:[);/ ]|$)'
@@ -12504,6 +12506,8 @@ OPPO:
       model: 'A93s'
     - regex: '(?:CPH2203)(?:[);/ ]|$)'
       model: 'A94'
+    - regex: '(?:CPH2197)(?:[);/ ]|$)'
+      model: 'A94 5G'
     - regex: 'PCE[TM]00(?:[);/ ]|$)'
       model: 'A9x'
     - regex: '(?:OPPO[ _]?)?CPH1851(?:[);/ ]|$)'
@@ -12572,7 +12576,7 @@ OPPO:
       model: 'Find X2 Pro'
     - regex: 'PEDM00(?:[);/ ]|$)'
       model: 'Find X3'
-    - regex: 'PEEM00(?:[);/ ]|$)'
+    - regex: '(?:PEEM00|CPH2173)(?:[);/ ]|$)'
       model: 'Find X3 Pro'
     - regex: '(?:OPPO[ _]?)?R1011 Build'
       model: 'Joy Plus'
@@ -12692,7 +12696,7 @@ OPPO:
       model: 'Reno 5F'
     - regex: 'CPH2211(?:[);/ ]|$)'
       model: 'Reno 5Z'
-    - regex: '(?:PDS[TM]00|CPH2207)(?:[);/ ]|$)'
+    - regex: '(?:PDS[TM]00|CPH220[17])(?:[);/ ]|$)'
       model: 'Reno 5 Pro 5G'
     - regex: 'PDR[TM]00(?:[);/ ]|$)'
       model: 'Reno 5 Pro Plus 5G'
@@ -17709,7 +17713,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19G|M2101K(?:[79]AG|7AI|7BG|6[GIRP]|7BNY|9G)|M2010J19S[CGYI]|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19G|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -17771,7 +17775,7 @@ Xiaomi:
       model: 'MI 11i'
     - regex: 'M2101K9AG(?:[);/ ]|$)'
       model: 'MI 11 Lite'
-    - regex: 'M2101K9G(?:[);/ ]|$)'
+    - regex: 'M2101K9[GC](?:[);/ ]|$)'
       model: 'MI 11 Lite 5G'
     - regex: 'M2102K1[CG](?:[);/ ]|$)'
       model: 'MI 11 Ultra'
@@ -17924,7 +17928,7 @@ Xiaomi:
     - regex: 'M2101K7A[GI]'
       model: 'Redmi Note 10'
       device: 'phablet'
-    - regex: 'M2101K7B(?:G|NY)(?:[);/ ]|$)'
+    - regex: 'M2101K7B(?:[GI]|NY)(?:[);/ ]|$)'
       model: 'Redmi Note 10S'
       device: 'phablet'
     - regex: 'M2103K19G'
@@ -17932,6 +17936,9 @@ Xiaomi:
       device: 'phablet'
     - regex: 'M2101K6[GIRP](?:[);/ ]|$)'
       model: 'Redmi Note 10 Pro'
+      device: 'phablet'
+    - regex: 'M1908C3JGG(?:[);/ ]|$)'
+      model: 'Redmi Note 8 (2021)'
       device: 'phablet'
     - regex: 'Redmi Note ([5-9]) Pro(?:[);/ ]|$)'
       model: 'Redmi Note $1 Pro'
